--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
         </div>
         <div class="flex flex-col mb-4 md:mb-0 items-center p-6 space-y-6 rounded-lg bg-slate-300 md:w-1/4">
           <img src="images/undraw_inspiration_re_ivlv.svg" alt="" class="md:h-1/2">
-          <h5 class="text-lg font-bold">Graphic design</h5>
+          <a href="./notification.html">
+            <h5 class="text-lg font-bold">Grpahic Designing</h5>
+          </a>
           <p class="text-sm text-grey">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae, autem.
           </p>
